--- a/frontend/src/Components/DemandeDetails/DemandeDetails.css
+++ b/frontend/src/Components/DemandeDetails/DemandeDetails.css
@@ -45,8 +45,8 @@
   
   /* Main image */
   .demande-detail-image {
-    width: 100%;
-    max-height: 500px;
+    width:750px;
+    height: 400px;
     object-fit: cover;
     border-radius: 6px;
     margin-bottom: 20px;
